# kombain

./: .gitignore  pyproject.toml
kombain_service/: manage.py
kombain_service/kombain_service/: asgi.py  forms.py  models.py  settings.py  urls.py  view.py  wsgi.py
kombain_service/kombain_service/migrations/: 0001_initial.py
kombain_service/kombain_service/template/: base.html
kombain_service/kombain_service/template/registration/: logged_out.html  login.html  password_reset_form.html  sign_up.html
kombain_service/kombain_service/template/report/: creation.html  listing.html  report.html
